@@ -563,6 +563,7 @@ static struct words words[] = {
 	{"#warning",	CP_WARNING},
 	{"::",		CPP_SEP},
 	{"__P",		CPP___P},
+	{"__attribute__",CPP___ATTRIBUTE__},
 	{"asm",		CPP_ASM},
 	{"auto",	CPP_AUTO},
 	{"break",	CPP_BREAK},
@@ -578,6 +579,7 @@ static struct words words[] = {
 	{"double",	CPP_DOUBLE},
 	{"else",	CPP_ELSE},
 	{"enum",	CPP_ENUM},
+	{"explicit",	CPP_EXPLICIT},
 	{"extern",	CPP_EXTERN},
 	{"float",	CPP_FLOAT},
 	{"for",		CPP_FOR},
@@ -587,8 +589,11 @@ static struct words words[] = {
 	{"inline",	CPP_INLINE},
 	{"int",		CPP_INT},
 	{"long",	CPP_LONG},
+	{"mutable",	CPP_MUTABLE},
+	{"namespace",	CPP_NAMESPACE},
 	{"new",		CPP_NEW},
 	{"operator",	CPP_OPERATOR},
+	{"overload",	CPP_OVERLOAD},
 	{"private",	CPP_PRIVATE},
 	{"protected",	CPP_PROTECTED},
 	{"public",	CPP_PUBLIC},
@@ -605,8 +610,10 @@ static struct words words[] = {
 	{"throw",	CPP_THROW},
 	{"try",		CPP_TRY},
 	{"typedef",	CPP_TYPEDEF},
+	{"typename",	CPP_TYPENAME},
 	{"union",	CPP_UNION},
 	{"unsigned",	CPP_UNSIGNED},
+	{"using",	CPP_USING},
 	{"virtual",	CPP_VIRTUAL},
 	{"void",	CPP_VOID},
 	{"volatile",	CPP_VOLATILE},
